# xfep-parser

./: .gitignore  README.md  pyproject.toml
src/xfep/parser/: __init__.py  _namespaces.py  cdr.py  errors.py  status.py
tests/: conftest.py  test_cdr.py  test_status.py
